--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@capacitor/android": "^7.2.0",
+    "@capacitor/cli": "^7.2.0",
+    "@capacitor/core": "^7.2.0",
     "@tailwindcss/postcss": "^4.1.8",
     "daisyui": "^5.0.43",
     "lucide-angular": "^0.513.0",
